Use auth session. Login tested. Closes #15. Closes #21. Closes #25.

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
   "SERVER": "http://localhost:5984",
   "DATABASE": "test",
-  "USERNAME": null,
-  "PASSWORD": null
+  "USERNAME": "admin",
+  "PASSWORD": "abc123"
 }
