--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-atomicwrites==1.2.1
-attrs==18.2.0
-certifi==2018.11.29
+atomicwrites==1.3.0
+attrs==19.3.0
+certifi==2019.9.11
 chardet==3.0.4
-funcsigs==1.0.2
 idna==2.8
-more-itertools==4.3.0
-pathlib2==2.3.3
-pluggy==0.8.0
-py==1.7.0
-pytest==4.0.1
-requests==2.21.0
-scandir==1.9.0
+importlib-metadata==0.23
+more-itertools==7.2.0
+packaging==19.2
+pluggy==0.13.0
+py==1.8.0
+pyparsing==2.4.2
+pytest==5.2.1
+requests==2.22.0
 six==1.12.0
-urllib3==1.24.2
+urllib3==1.25.6
+wcwidth==0.1.7
+zipp==0.6.0
