Added setup file.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,9 @@
 [metadata]
 name = CouchDB2
-version = 1.9.4
+version = 1.9.5
 author = Per Kraulis
 author_email = per.kraulis@scilifelab.se
+license = MIT
 description = CouchDB v2.x Python 3 interface in a single module. Also a command line tool.
 long_description = file: README.md
 long_description_content_type = text/markdown
