--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,40 @@
 atomicwrites==1.3.0
 attrs==19.3.0
+bleach==3.1.0
+build==0.3.1.post1
 certifi==2019.9.11
+cffi==1.13.2
 chardet==3.0.4
+colorama==0.4.4
+cryptography==2.8
+docutils==0.15.2
+entrypoints==0.3
 idna==2.8
 importlib-metadata==0.23
+iniconfig==1.1.1
+jeepney==0.4.1
+keyring==19.2.0
 more-itertools==7.2.0
 packaging==19.2
+pep517==0.9.1
+pkg-resources==0.0.0
+pkginfo==1.5.0.1
 pluggy==0.13.0
-py==1.8.0
+py==1.10.0
+pycparser==2.19
+Pygments==2.4.2
 pyparsing==2.4.2
-pytest==5.2.1
+pytest==6.2.3
+readme-renderer==24.0
 requests==2.22.0
+requests-toolbelt==0.9.1
+rfc3986==1.4.0
+SecretStorage==3.1.1
 six==1.12.0
+toml==0.10.2
+tqdm==4.38.0
+twine==3.3.0
 urllib3==1.25.6
 wcwidth==0.1.7
+webencodings==0.5.1
 zipp==0.6.0
