--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-certifi==2021.5.30
+certifi==2021.10.8
 chardet==4.0.0
+charset-normalizer==2.0.7
 idna==2.10
-requests==2.25.1
+requests==2.26.0
+tqdm==4.62.3
 urllib3==1.26.5
